# clipsync

./: .gitignore  .gitmodules  CLAUDE.md  LOG.md  PLAN.md  README.md  index.html  package.json  picker.html  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.claude/: settings.json
.claude/hooks/: pr-spec-reminder.sh  spec-freshness-check.sh  spec-read-reminder.sh
docs/: README.ja.md
docs/adr/: 001-tauri-v2-desktop-framework.md  002-supabase-backend.md  003-dual-mode-oauth.md  004-three-tier-context-infrastructure.md  005-flutter-mobile-crossplatform.md  006-riverpod-state-management.md  007-feature-first-flutter-architecture.md
docs/specs/: auth-flow.md  bug-memory.md  clipboard-flow.md  mobile-app.md  supabase-data.md  ui-components.md
e2e/: auth-screen.spec.ts  supabase-clips.spec.ts  tauri-mock.ts
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
src/: App.tsx  index.css  picker.css  picker.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_server.rs  commands.rs  lib.rs  main.rs  picker.rs  shortcuts.rs
src/__tests__/: shortcutKeys.test.ts  useAuth.test.ts  useClips.test.ts  useRealtimeClips.test.ts
src/components/: AuthScreen.tsx  ClipItem.tsx  ClipList.tsx  HistoryPicker.tsx  PickerApp.tsx  SettingsPanel.tsx  ShortcutRecorder.tsx
src/hooks/: useAuth.ts  useClips.ts  useRealtimeClips.ts  useShortcuts.ts
src/lib/: logger.ts  shortcutKeys.ts  supabase.ts  types.ts
supabase/: config.toml
supabase/migrations/: 00001_create_clips.sql  00002_clips_user_id_default.sql
(+33 files in other folders)
