[package]
name = "clipsync"
version = "0.1.0"
description = "Cross-platform cloud clipboard sync"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clipsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
hostname = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
enigo = "0.3"
